...
    <string name="User">User</string>
    <string name="btn_display">btn_display</string>
    <string name="NEXT">NEXT</string>
    <string name="title_activity_notifications">NotificationsActivity</string>


    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="button_back">Back</string>
    <string name="button_edit">Edit event</string>
    <string name="title_profile">Profile</string>
    <string name="title_publishers">Publishers</string>
    <string name="title_activity_profilepage">profilepage</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="text_publisherName">Name:</string>
    <string name="title_profilepage">Profile Page</string>
    <string name="button_editprofile">Edit Profile</string>
    <string name="title_activity_publisher_events">Publisher Events</string>
    <string name="event_name">Name:</string>
    <string name="event_Description">Description:</string>
    <string name="event_attendees">Number of Attendees:</string>
    <string name="event_date">Date:</string>
    <string name="event_time">Time:</string>
    <string name="event_location">Location:</string>
...
