<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/actionbar_background">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="130dp"
        android:layout_marginBottom="200dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_in_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="66dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="29dp"
        android:text="CampuSee"
        android:textColor="@color/button_color"
        android:textSize="55dp"
        android:textStyle="bold" />

</RelativeLayout>